keep chapter number from rendering

--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -57,7 +57,7 @@ NCEAS hosts a number of events that you are encouraged to attend. Keep an eye on
     + potluck salad and socializing, bring a topping or side to share!
     + second Tuesday of the month, 12:15 in the lounge
     
-## Citation Information
+## Citation Information {-}
 
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
