--- a/workflows/explore_eml/access_specific_elements.Rmd
+++ b/workflows/explore_eml/access_specific_elements.Rmd
@@ -3,57 +3,40 @@
 The `eml_get()` function is a powerful tool for exploring EML (more on that [here](https://cran.rstudio.com/web/packages/EML/vignettes/parsing-EML.html)). It takes any chunk of EML and returns _all instances_ of the element you specify. _Note:_ you'll have to specify the element of interest exactly, according to the spelling/capitalization conventions used in EML. Here are some examples:
 
 ```{r "creator", eval = FALSE}
-eml <- read_eml(system.file("example-eml.xml", package = "arcticdatautils"))
-eml_get(eml, "creator")
+doc <- read_eml(system.file("example-eml.xml", package = "arcticdatautils"))
+eml_get(doc, "creator")
 ```
 ```
-[[1]]
-An object of class "ListOfcreator"
-[[1]]
-<creator system="uuid">
-  <individualName>
-    <givenName>Bryce</givenName>
-    <surName>Mecum</surName>
-  </individualName>
-  <organizationName>National Center for Ecological Analysis and Synthesis</organizationName>
-</creator>
+individualName:
+  givenName: Bryce
+  surName: Mecum
+organizationName: National Center for Ecological Analysis and Synthesis
 ```
 
 ```{r "boundingCoords", eval = FALSE}
-eml_get(eml, "boundingCoordinates")
+eml_get(doc, "boundingCoordinates")
 ```
 ```
-<boundingCoordinates>
-  <westBoundingCoordinate>-135</westBoundingCoordinate>
-  <eastBoundingCoordinate>-134</eastBoundingCoordinate>
-  <northBoundingCoordinate>59</northBoundingCoordinate>
-  <southBoundingCoordinate>57</southBoundingCoordinate>
-</boundingCoordinates>
+eastBoundingCoordinate: '-134'
+northBoundingCoordinate: '59'
+southBoundingCoordinate: '57'
+westBoundingCoordinate: '-135'
 ```
 
 ```{r "url", eval = FALSE}
-eml_get(eml, "url")
+eml_get(doc, "url")
 ```
 ```
-[1] "ecogrid://knb/urn:uuid:89bec5d0-26db-48ac-ae54-e1b4c999c456"
+'':
+  function: download
+  url: ecogrid://knb/urn:uuid:89bec5d0-26db-48ac-ae54-e1b4c999c456
+'': ecogrid://knb/urn:uuid:89bec5d0-26db-48ac-ae54-e1b4c999c456
 ```
 
-You can also use the `which_in_eml()` function from the `datamgmt` package to get indices within an EML list. Here are some examples:
+You can also use the `which_in_eml()` function from the `datamgmt` package to get indices within an EML list. Here is an example:
 
 ```{r "which_in_eml", eval = FALSE}
 # Question: Which creators have a surName "Mecum"?
-n <- which_in_eml(eml@dataset@creator, "surName", "Mecum")
+n <- which_in_eml(doc$dataset$creator, "surName", "Mecum")
 # Answer: eml@dataset@creator[n]
-
-# Question: Which dataTables have an entityName that begins with "2016"
-n <- which_in_eml(eml@dataset@dataTable, "entityName", function(x) {grepl("^2016", x)})
-# Answer: eml@dataset@dataTable[n]
-
-# Question: Which attributes in dataTable[[1]] have a numberType "natural"?
-n <- which_in_eml(eml@dataset@dataTable[[1]]@attributeList@attribute, "numberType", "natural")
-# Answer: eml@dataset@dataTable[[1]]@attributeList@attribute[n]
-
-#' # Question: Which dataTables have at least one attribute with a numberType "natural"?
-n <- which_in_eml(eml@dataset@dataTable, "numberType", function(x) {"natural" %in% x})
-# Answer: eml@dataset@dataTable[n]
 ```
