--- a/workflows/edit_eml/edit_spatialvectors.Rmd
+++ b/workflows/edit_eml/edit_spatialvectors.Rmd
@@ -5,7 +5,7 @@ Occasionally, you may encounter a third type of data object: `spatialVector`. Th
 To add a `geometry` slot use:
 
 ```{r, eval = FALSE}
-eml@dataset@spatialVector[[1]]@geometry[[1]] <- read_eml("<geometry>Polygon</geometry>")
+doc$dataset$spatialVector[[1]]$geometry <- "Polygon"
 ```
 
 Additionally, spatial data should typically be archived within a .zip file to ensure all related and interdependent files stay together. For example, a spatial dataset for a shapefile should, at a minimum, consist of separate .dbf, .shp, and .shx files with the same prefix in the same directory. All these files are required in order to use the data. Also note that shapefiles limit attribute names to 10 characters, so attribute names in the metadata may not match exactly to attribute names in the data.
