--- a/workflows/edit_eml/set_methods.Rmd
+++ b/workflows/edit_eml/set_methods.Rmd
@@ -1,14 +1,12 @@
 ## Set methods
 
-The methods tree in the EML section has many different options, visible in the [schema](https://knb.ecoinformatics.org/emlparser/docs/eml-2.1.1/eml-methods.png). You can create new elements in the methods tree by following the schema and using the `new()` command. Remember you can explore possible slots within an element by creating an empty object of the class you are trying to create. For example, `method_step <- new('methodStep')`, and using auto-complete on `method_step@`.
-
-Potentially the most useful way to set methods is by [editing with the EML package](#edit-eml-with-the-eml-package).
+The methods tree in the EML section has many different options, visible in the [schema](https://knb.ecoinformatics.org/emlparser/docs/eml-2.1.1/eml-methods.png). You can create new elements in the methods tree by following the schema and using the `eml` helpers.
 
 Another simple and potentially useful way to add methods to an EML that has no methods at all is by adding them via a MS Word document. An example is shown below:
 
 ```{r, eval = F}
 methods1 <- set_methods('methods_doc.docx')
-eml@dataset@methods <- methods1
+doc$dataset$methods <- methods1
 ```
 
 If you want to make minor changes to existing methods information that has a lot of nested elements, your best bet may be to edit the EML manually in a text editor (or in RStudio), otherwise there is a risk of accidentally overwriting nested elements with blank object classes, therefore losing methods information.
@@ -17,20 +15,17 @@ If you want to make minor changes to existing methods information that has a lot
 
 ```{r, eval = FALSE}
 # add method steps as new variables
-step1 <- new('methodStep',
-             description = "methods text")
+step1 <- eml$methodStep(description = "text describing the methods used")
 
-stEx <- new("studyExtent", 
-           description = "study extent description")
+stEx <- eml$studyExtent(description = "study extent description")
 
-samp <- new("sampling", 
-           studyExtent = stEx,
-           samplingDescription = "sampling description text")
+samp <- eml$sampling(studyExtent = stEx,
+                     samplingDescription = "sampling description text")
+
 
 # combine all methods steps and sampling info 
-methods1 <- new("methods",
-               methodStep = c(step1),
-               sampling = samp)
-               
-eml@dataset@methods <- methods1
+methods1 <- eml$methods(methodStep = step1, 
+                        sampling = samp)
+
+doc$dataset$methods <- methods1
 ```
