--- a/workflows/edit_eml/series_identifier.Rmd
+++ b/workflows/edit_eml/series_identifier.Rmd
@@ -1,8 +1,8 @@
-# Series Identifier (SID)
+## Series Identifier (SID)
 A series identifier is a system metadata field that represents a single identifier across multiple versions of a data package, a feature often requested by submitters.  These are useful for maintaining a single identifier when a data package is expected to receive updates (usually additional data) in the future.  
 
 
-## Adding a SID to a package
+### Adding a SID to a package
 Adding a series identifier should be the last step.  In most cases the SID will be in `DOI` format.  Once the data package is complete (peer-reviewd and approved by the PI) the series identifier can be added by updating the `seriesId` field of the system metadata of the metadata object. 
 
 ```{r, eval=F}
@@ -15,7 +15,7 @@ updateSystemMetadata(mn, metadata_pid, sys)
 ```
 
 
-## Updating the child packages of a parent package with a SID
+### Updating the child packages of a parent package with a SID
 When updating a parent package with a series identifier you need to use `update_resource_map` rather than `publish_update`.  In this case our goal is add nested data packages to an existing parent package. 
 
 ```{r, eval=F}
@@ -29,7 +29,7 @@ update_resource_map(mn, parent_package$resource_map, parent_package$metadata, pa
 
 ```
 
-## Updating the metadata of a package with a SID 
+### Updating the metadata of a package with a SID 
 When updating the metadata (xml) of a package with a series identifier use `publish_update`.  It's important that you pass the metadata pid to the `metadata_pid` argument rather than `seriesId`.  The metadata pid will usually have the text "version: " ahead of it, however it's best to use `get_package` first to avoid mistakes. 
 ```{r, eval=F}
 pkg <- get_package(adc, 'resource_map_pid')
