--- a/workflows/solr_queries/y_example_solr_queries.Rmd
+++ b/workflows/solr_queries/y_example_solr_queries.Rmd
@@ -53,6 +53,22 @@ result <- query(adc, list(q="title:soil* OR origin:Ludwig",
 You can use either spaces or `+` to separate query parameters. When typing queries in R, it's often easier to read if you use spaces. However, when using the browser, you may want to use `+` to keep the query clean. (The browser will replace spaces with `%20`.)
 ```
 
+### Query by formatType
+Objects are queryable via their `formatType` which is one of DATA, METADATA, or RESOURCE.  
+```{r, eval=FALSE}
+result <- query(adc, list(q = 'formatType:RESOURCE AND submitter:"http://orcid.org/0000-0002-2561-5840"',
+                          fl = 'identifier,submitter,fileName',
+                          sort = 'dateUploaded+desc',
+                          rows='10'),
+                as = "data.frame")
+
+result <- query(adc, list(q = 'formatType:METADATA AND title:*Toolik*',
+                          fl = 'identifier,submitter,fileName',
+                          sort = 'dateUploaded+desc',
+                          rows='10'),
+                as = "data.frame")
+```
+
 ### Query pids by a specific submitter
 
 ```{r, eval = FALSE}
